test/integration/bad/lang/incomplete13.stan
functions {
  void (int x) {
    return x + 1.0;
  }
}
